testsuite/tests/parser/should_fail/T18251e.hs
module T18251e where

a = [| id |]
