testsuite/tests/parser/should_fail/T18251e.stderr

T18251e.hs:3:5: error: [GHC-62558]
    • Syntax error on [| id |]
    • In the Template Haskell quotation [| id |]
    Suggested fix:
      Perhaps you intended to use the ‘TemplateHaskellQuotes’ extension (implied by ‘TemplateHaskell’)
